# ashbot2

./: .env.example  .gitignore  README.md  config.py  generate_logo.py  main.py  pyproject.toml  requirements.txt  schema.sql
.github/workflows/: deploy-supabase.yml
ashbot/: bot.py
ashbot/cogs/: admin.py  advice_cog.py  ai_cog.py  automod.py  backups.py  fun_cog.py  levels.py  logs_cog.py  moderation.py  protection.py
ashbot/dashboard/: server.py
ashbot/models/: database.py
ashbot/templates/: dashboard.html  server.html
ashbot/utils/: embeds.py  permissions.py
